tests/typechecker/should_pass/dot_partial_application_in_patterns.csp
datatype Z = B.{0..1}

channel c : Z

b = c.B

P = b.0 -> STOP
