tests/typechecker/should_fail/channel_incomplete_field.csp
datatype A = B.Bool

channel a : {B}
